--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "webpack-merge": "^5.2.0"
   },
   "dependencies": {
+    "json-loader": "^0.5.7",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
