dynamisation complète de l'affichage d'un projet

--- a/src/data/devProjects.json
+++ b/src/data/devProjects.json
@@ -33,6 +33,13 @@
         "GIT",
         "Méthode Agile SCRUM"
       ]
+    },
+    {
+      "title": "Liens",
+      "links": [
+        "Voir l'application",
+        "Voir le code sur GIT"
+      ]
     }
   ]
 }
