--- a/package.json
+++ b/package.json
@@ -57,7 +57,9 @@
   "dependencies": {
     "json-loader": "^0.5.7",
     "prop-types": "^15.7.2",
+    "radium": "^0.26.1",
     "react": "^16.14.0",
+    "react-animations": "^1.0.0",
     "react-dom": "^16.14.0",
     "react-router-dom": "^5.2.0"
   }
