go back button on projects

--- a/src/data/uxUiProjects.json
+++ b/src/data/uxUiProjects.json
@@ -35,7 +35,7 @@
       "title": "Liens",
       "links": [
         {
-          "label": "Visite Le Temps des Cigales",
+          "label": "Visiter Le Temps des Cigales",
           "link":  "https://www.letempsdescigales.com/"
         }
       ]
