--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-modele",
+  "homepage": ".",
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack-dev-server --config config/webpack.dev.js",
     "build": "cross-env NODE_ENV=production webpack --config config/webpack.prod.js",
@@ -62,5 +63,8 @@
     "react-animations": "^1.0.0",
     "react-dom": "^16.14.0",
     "react-router-dom": "^5.2.0"
-  }
+  },
+  "version": "1.0.0",
+  "main": "index.js",
+  "license": "MIT"
 }
