change images before production

--- a/src/data/devProjects.json
+++ b/src/data/devProjects.json
@@ -138,8 +138,9 @@
 },
 {
   "screenshots" : [
-    "./images/a8107d8dc82cb82a13883cade78cd245.jpg",
-  "./images/eefe4fb6ae1f69a373d89f5e34e72159.jpg"
+    "./images/d7d036e01901acb1c8bc49144c0ddd11.png",
+    "./images/67dbabcc4648d1e3ccb987b69f57876a.png"
+  
   ]
 }
 ],
