vérifier liens + screenshots + build

--- a/src/data/devProjects.json
+++ b/src/data/devProjects.json
@@ -168,7 +168,7 @@
     },
     {
       "label": "Voir l'app",
-      "link":  "todovue-ms.surge.sh"
+      "link":  "http://todovue-ms.surge.sh"
     }
   ]
   },
