--- a/src/data/devProjects.json
+++ b/src/data/devProjects.json
@@ -156,7 +156,7 @@
    "title": "Caractéristiques techniques",
    "data": [
      "Front : Vue.js, VueDraggable",
-     "Gestionnaire: Npmr"
+     "Gestionnaire: Npm"
    ]
   },
   {
